WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199298
Protect NetworkProcess::m_swServers from bad session IDs
https://bugs.webkit.org/show_bug.cgi?id=199298
Summary
Protect NetworkProcess::m_swServers from bad session IDs
youenn fablet
Reported
2019-06-27 16:25:16 PDT
Protect NetworkProcess::m_swServers from bad session IDs
Attachments
Patch
(8.62 KB, patch)
2019-06-27 18:32 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(9.96 KB, patch)
2019-06-28 09:27 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Updating change log
(10.18 KB, patch)
2019-06-28 13:58 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-06-27 16:25:38 PDT
<
rdar://problem/51859081
>
youenn fablet
Comment 2
2019-06-27 18:32:15 PDT
Created
attachment 373075
[details]
Patch
youenn fablet
Comment 3
2019-06-28 09:27:39 PDT
Created
attachment 373122
[details]
Patch
youenn fablet
Comment 4
2019-06-28 13:58:38 PDT
Created
attachment 373148
[details]
Updating change log
WebKit Commit Bot
Comment 5
2019-06-28 14:53:48 PDT
Comment on
attachment 373148
[details]
Updating change log Clearing flags on attachment: 373148 Committed
r246939
: <
https://trac.webkit.org/changeset/246939
>
WebKit Commit Bot
Comment 6
2019-06-28 14:53:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug